# syngenlib

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test_trafo_grid.xlsx  testing.v2.ipynb
Figures/: Model_1.afdesign
SynGenLib/: CapabilityDiagramModel.py  DataClasses.py  PowerLossModel.py  __init__.py  utils.py
SynGenLib/ExampleGens/: __init__.py
SynGenLib/ExampleModels/: example_generators.py
SynGenLib/GenModel1/: GenModel.py  __init__.py  example_gens.py
SynGenLib/GenModel2/: DataClasses.py  GenModel.py  example_gens.py
SynGenLib/Model1/: __init__.py  capability_diagram.py  model_dataclass.py  power_losses.py
SynGenLib/SatModels/: __init__.py
SynGenLib/models/: __init__.py  capability_diagram_model.py  generator_loss_model.py  transformer_loss_model.py
SynGenLoss/: __init__.py  utils.py
SynGenLoss/Examples/: getting_started.ipynb
examples/: __init__.py  gen_model_103_mva.py  gen_model_120_mva.py  gen_model_160_mva.py  gen_model_30_mva.py  gen_model_60_mva.py  gen_model_80_mva.py  plotting_capability_diagram.py  plotting_generator_efficiency_contours.py  plotting_gernerator_efficieny_contours.py  sample_generators.py  sample_transformers.py
syngenlib/: common.py
tests/: data_for_testing.py  test_branch_operating_point_calculation.py  test_cap_diag1.py  test_generator_loss_calculations.py  test_generator_loss_calculations_103_mva_gen.py  test_generator_operating_point_calculation.py  test_model_1.py  test_model_2.py  test_model_2_symbolic.py  test_plant_operating_point_calculation.py  test_sat_model_3.py
(+60 files in other folders)
